--- a/src/js/components/App/App.css
+++ b/src/js/components/App/App.css
@@ -1,3 +1,15 @@
-.container {
+html, body {
+  margin: 0;
+  height: 100%;
+}
 
+:global #app {
+  height: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
