--- a/src/js/components/Header/Header.css
+++ b/src/js/components/Header/Header.css
@@ -1,15 +1,10 @@
 .container {
-
+  padding: 0 0.5em;
 }
 
 .heading {
   display: inline-block;
-}
-
-.settings {
-
-}
-
-.satelliteDropdown {
-  z-index: 9999;
+  margin-right: 1rem;
+  letter-spacing: -0.01em;
+  font-size: 1.5rem;
 }
