--- a/src/js/components/Header/SatelliteInput.css
+++ b/src/js/components/Header/SatelliteInput.css
@@ -1,5 +1,6 @@
 .container {
  display: inline-block;
+ flex: 1;
 }
 
 .dropdown {
@@ -11,6 +12,7 @@
 }
 
 .input {
+  width: 100%;
   font-size: 1.5rem;
   padding: 0.1rem 0.25rem;
 }
