--- a/new/src/app.css
+++ b/new/src/app.css
@@ -19,3 +19,27 @@
 	display: flex;
 }
 
+@custom-media --viewport-1 (min-width: 100px);
+@custom-media --viewport-4 (min-width: 480px);
+@custom-media --viewport-7 (min-width: 768px);
+@custom-media --viewport-9 (min-width: 992px);
+@custom-media --viewport-12 (min-width: 1200px);
+
+@media (--viewport-1) {
+  :global html {
+  	font-size: 9px;
+  }
+}
+
+@media (--viewport-4) {
+  :global html {
+  	font-size: 14px;
+  }
+}
+
+@media (--viewport-7) {
+  :global html {
+  	font-size: 16px;
+  }
+}
+
