--- a/new/src/components/Header/index.css
+++ b/new/src/components/Header/index.css
@@ -2,6 +2,11 @@
 	display: flex;
 	padding: 0.1rem 1rem;
 	align-items: center;
+	min-height: 5rem;
+}
+
+.container a {
+	text-decoration: none;
 }
 
 .nav {
@@ -12,6 +17,8 @@
 .nav ul {
 	list-style: none;
 	padding-left: 0.2rem;
+	margin: 0;
+	white-space: pre;
 }
 
 .nav ul li {
@@ -48,8 +55,11 @@
 	margin: 0 1rem 0 0;
 	display: inline-block;
 	font-size: 1.3rem;
+	font-weight: 200;
 }
 
 .search {
-	min-width: 22rem;
+	flex: 1;
+	padding: 0.5rem;
 }
+
