--- a/new/src/pages/Map.css
+++ b/new/src/pages/Map.css
@@ -5,5 +5,6 @@
 .mapContainer {
 	min-height: 0;
 	flex: 1;
-	display: flex;
+	position: relative;
+	overflow: hidden; /* Fixes popups sometimes overlapping header. */
 }
