--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    height: 100vh;
     min-height: -webkit-fill-available; /* Mobile Safari hack */
 }
 
