--- a/src/components/MapPopup/index.css
+++ b/src/components/MapPopup/index.css
@@ -1,10 +1,9 @@
 .container {
 	display: block;
-	width: 100px;
-}
-
-.container :global .mapboxgl-popup-content {
-	background-color: white;
+	width: 10rem;
+	background-color: rgba(255, 255, 255, 0.3);
+	color: white;
+	text-shadow: rgba(0, 0, 0, 0.5) -1px -1px 0px, rgba(0, 0, 0, 0.5) 1px -1px 0px, rgba(0, 0, 0, 0.5) -1px 1px 0px, rgba(0, 0, 0, 0.5) 1px 1px 0px;
 	padding: 0.5rem;
 }
 
